NetworkPolicy/nginx-port80-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx5
  labels:
    app: nginx
    tier: backend
spec:
  containers:
    - image: nginx
      name: nginx-container
      ports:
        - containerPort: 80
          protocol: TCP
