NetworkPolicy/nginx-port80.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx4
  labels:
    app: nginx
spec:
  containers:
    - image: nginx
      name: nginx-container
      ports:
        - containerPort: 80
          protocol: TCP
