NetworkPolicy/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-frontend
  labels:
    pol: netpol-frontend
spec:
  podSelector:
    matchLabels:
      tier: frontend
      app: nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: frontend
              app: centos
